[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
object_store = { version = "0.12", features = ["aws"] }

[profile.release]
panic = "abort"