[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2.3"
num_cpus = "1.13.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
object_store = { version = "0.12", features = ["aws"] }
parquet = { version = "54", features = ["async"], optional = true }
arrow = { version = "54", optional = true }

[features]
default = ["parquet"]
parquet = ["dep:parquet", "dep:arrow"]

[profile.release]
panic = "abort"