[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0"
url = "2.3"
num_cpus = "1.13.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
moka = { version = "0.12", features = ["sync"] }
object_store = { version = "0.12", features = ["aws"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
parquet = { version = "54", features = ["async"], optional = true }
arrow = { version = "54", optional = true }

[dev-dependencies]
env_logger = "0.11"
clap = { version = "4", features = ["cargo", "derive"] }

[features]
default = ["json", "parquet"]
json = ["dep:serde", "dep:serde_json"]
parquet = ["dep:parquet", "dep:arrow"]

[profile.release]
panic = "abort"